--- a/jupyter_notebooks/topic01_pandas_data_analysis/lesson1_practice_pandas_titanic.ipynb
+++ b/jupyter_notebooks/topic01_pandas_data_analysis/lesson1_practice_pandas_titanic.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "7                0      0             17463  51.8625   E46        S  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "max      1.000000    3.000000   80.000000    8.000000    6.000000  512.329200"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
        "[891 rows x 11 columns]>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +773,7 @@
        "378              0      2    113503  211.5000              C82        C  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +935,7 @@
        "743          21.0      2      2  PC 17608  262.3750  B57 B59 B63 B66        C  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1068,26 +1068,21 @@
    "source": [
     "**2. Выведите распределение переменной `Pclass` (социально-экономический статус) и это же распределение, только для мужчин / женщин по отдельности. Сколько было мужчин 2-го класса?**\n",
     "- 104\n",
-    "- 108\n",
+    "- **108**\n",
     "- 112\n",
     "- 125"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Series' object has no attribute 'value_count'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-51-488b8fa7fab2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m#      (data['Sex' == 'male'])])\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Pclass'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Sex'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'male'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Pclass'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue_count\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   2968\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2969\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2970\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2971\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2972\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Series' object has no attribute 'value_count'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "108\n"
      ]
     }
    ],
@@ -1096,7 +1091,7 @@
     "# len(data[(data['Pclass' == 2]) & \n",
     "#      (data['Sex' == 'male'])])\n",
     "\n",
-    "data[(data['Pclass'] == 2) & (data['Sex'] == 'male')]['Pclass'].value_count()"
+    "print(len(data[(data['Pclass'] == 2) & (data['Sex'] == 'male')]['Survived']) ) "
    ]
   },
   {
@@ -1112,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1142,6 +1137,7 @@
        "      <th>SibSp</th>\n",
        "      <th>Parch</th>\n",
        "      <th>Fare</th>\n",
+       "      <th>Age_category</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1150,6 +1146,7 @@
        "      <td>891.00</td>\n",
        "      <td>891.00</td>\n",
        "      <td>714.00</td>\n",
+       "      <td>891.00</td>\n",
        "      <td>891.00</td>\n",
        "      <td>891.00</td>\n",
        "      <td>891.00</td>\n",
@@ -1162,6 +1159,7 @@
        "      <td>0.52</td>\n",
        "      <td>0.38</td>\n",
        "      <td>32.20</td>\n",
+       "      <td>1.81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
@@ -1171,6 +1169,7 @@
        "      <td>1.10</td>\n",
        "      <td>0.81</td>\n",
        "      <td>49.69</td>\n",
+       "      <td>0.80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -1180,6 +1179,7 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
+       "      <td>1.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
@@ -1189,6 +1189,7 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>7.91</td>\n",
+       "      <td>1.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
@@ -1198,6 +1199,7 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>14.45</td>\n",
+       "      <td>2.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
@@ -1207,6 +1209,7 @@
        "      <td>1.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>31.00</td>\n",
+       "      <td>2.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
@@ -1216,24 +1219,25 @@
        "      <td>8.00</td>\n",
        "      <td>6.00</td>\n",
        "      <td>512.33</td>\n",
+       "      <td>3.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Survived  Pclass     Age   SibSp   Parch    Fare\n",
-       "count    891.00  891.00  714.00  891.00  891.00  891.00\n",
-       "mean       0.38    2.31   29.70    0.52    0.38   32.20\n",
-       "std        0.49    0.84   14.53    1.10    0.81   49.69\n",
-       "min        0.00    1.00    0.42    0.00    0.00    0.00\n",
-       "25%        0.00    2.00   20.12    0.00    0.00    7.91\n",
-       "50%        0.00    3.00   28.00    0.00    0.00   14.45\n",
-       "75%        1.00    3.00   38.00    1.00    0.00   31.00\n",
-       "max        1.00    3.00   80.00    8.00    6.00  512.33"
+       "       Survived  Pclass     Age   SibSp   Parch    Fare  Age_category\n",
+       "count    891.00  891.00  714.00  891.00  891.00  891.00        891.00\n",
+       "mean       0.38    2.31   29.70    0.52    0.38   32.20          1.81\n",
+       "std        0.49    0.84   14.53    1.10    0.81   49.69          0.80\n",
+       "min        0.00    1.00    0.42    0.00    0.00    0.00          1.00\n",
+       "25%        0.00    2.00   20.12    0.00    0.00    7.91          1.00\n",
+       "50%        0.00    3.00   28.00    0.00    0.00   14.45          2.00\n",
+       "75%        1.00    3.00   38.00    1.00    0.00   31.00          2.00\n",
+       "max        1.00    3.00   80.00    8.00    6.00  512.33          3.00"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1257,13 +1261,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-36-a3a589d10555>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-36-a3a589d10555>\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    len(((data[data['Age'] <= 30) & (data['Survived'] == 1)]['Survived']))\u001b[0m\n\u001b[1;37m                                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "# Ваш код здесь"
+    "# Ваш код здесь\n",
+    "#print(len(data[(data['Pclass'] == 2) & (data['Sex'] == 'male')]['Survived']) ) \n",
+    "\n",
+    "len(((data[data['Age'] <= 30) & (data['Survived'] == 1)]['Survived'])) \n"
    ]
   },
   {
@@ -1279,16 +1293,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1    0.188908\n",
+      "1    0.19\n",
       "Name: Survived, dtype: float64\n",
-      "1    0.742038\n",
+      "1    0.74\n",
       "Name: Survived, dtype: float64\n"
      ]
     }
@@ -1319,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -1339,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -1361,13 +1375,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Ваш код здесь"
+    "# Ваш код здесь\n"
    ]
   }
  ],
