--- a/jupyter_notebooks/topic01_pandas_data_analysis/hw1_session2_data_analysis_pandas.ipynb
+++ b/jupyter_notebooks/topic01_pandas_data_analysis/hw1_session2_data_analysis_pandas.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "9      0       1       0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
        "643.0"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all().",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-47-c0616ebafcee>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'sex'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'male'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'smoke'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'age_years'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m60\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'age_years'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m<=\u001b[0m \u001b[1;36m65\u001b[0m \u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'ap_hi'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m<=\u001b[0m \u001b[1;36m120\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'cholesterol'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'sex'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'male'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'smoke'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'age_years'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m60\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'age_years'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m<=\u001b[0m \u001b[1;36m65\u001b[0m \u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'ap_hi'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m160\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'ap_hi'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m<=\u001b[0m \u001b[1;36m180\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'cholesterol'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__nonzero__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    951\u001b[0m         raise ValueError(\"The truth value of a {0} is ambiguous. \"\n\u001b[0;32m    952\u001b[0m                          \u001b[1;34m\"Use a.empty, a.bool(), a.item(), a.any() or a.all().\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 953\u001b[1;33m                          .format(self.__class__.__name__))\n\u001b[0m\u001b[0;32m    954\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    955\u001b[0m     \u001b[0m__bool__\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m__nonzero__\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all()."
+     ]
+    }
+   ],
+   "source": [
+    "# Ваш код здесь\n",
+    "\n",
+    "#df = df.drop(['age_years'], axis = 1)\n",
+    "\n",
+    "#age_years = df['age'] / 365\n",
+    "\n",
+    "#df.insert(loc=len(df.columns), column='age_years', value=age_years)\n",
+    "\n",
+    "df.head()\n",
+    "\n",
+    "df[(df['sex'] == 'male') & (df['smoke'] == 1) & (df['age_years'] >= 60 and df['age_years'] <= 65 ) \\\n",
+    "& (df['ap_hi'] <= 120) & (df['cholesterol'] == 1)]\n",
+    "\n",
+    "df[(df['sex'] == 'male') & (df['smoke'] == 1) & (df['age_years'] >= 60 and df['age_years'] <= 65 ) \\\n",
+    "& (df['ap_hi'] >= 160 and df['ap_hi'] <= 180) & (df['cholesterol'] == 3)]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**<font color='red'>Вопрос 6 (2 балла).</font> Постройте новый признак – BMI ([Body Mass Index](https://en.wikipedia.org/wiki/Body_mass_index)). Для этого надо вес в килограммах поделить на квадрат роста в метрах. Нормальными считаются значения BMI от 18.5 до 25. Выберите верные утверждения.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**<font color='red'>Утверждения:</font>**\n",
+    "- Медианный BMI по выборке лежит в пределах нормы **нет**\n",
+    "- У женщин в среднем BMI выше, чем у мужчин **нет**\n",
+    "- У здоровых в среднем BMI выше, чем у больных **нет**\n",
+    "- В сегменте здоровых и непьющих мужчин BMI ближе к норме, чем в сегменте здоровых и непьющих женщин"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -676,25 +730,28 @@
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
+       "    <tr>\n",
        "      <th></th>\n",
-       "      <th>age</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>height</th>\n",
-       "      <th>weight</th>\n",
-       "      <th>ap_hi</th>\n",
-       "      <th>ap_lo</th>\n",
-       "      <th>cholesterol</th>\n",
-       "      <th>gluc</th>\n",
-       "      <th>smoke</th>\n",
-       "      <th>alco</th>\n",
-       "      <th>active</th>\n",
-       "      <th>cardio</th>\n",
-       "      <th>sex</th>\n",
+       "      <th colspan=\"6\" halign=\"left\">bmi</th>\n",
+       "      <th colspan=\"6\" halign=\"left\">alco</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>id</th>\n",
        "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>max</th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cardio</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -712,144 +769,71 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>18393</td>\n",
-       "      <td>2</td>\n",
-       "      <td>168</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>110</td>\n",
-       "      <td>80</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>male</td>\n",
+       "      <td>35021.0</td>\n",
+       "      <td>55.801023</td>\n",
+       "      <td>10.067571</td>\n",
+       "      <td>16.536213</td>\n",
+       "      <td>54.167626</td>\n",
+       "      <td>173.333333</td>\n",
+       "      <td>35021.0</td>\n",
+       "      <td>0.055424</td>\n",
+       "      <td>0.228809</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>20228</td>\n",
-       "      <td>1</td>\n",
-       "      <td>156</td>\n",
-       "      <td>85.0</td>\n",
-       "      <td>140</td>\n",
-       "      <td>90</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>female</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>18857</td>\n",
-       "      <td>1</td>\n",
-       "      <td>165</td>\n",
-       "      <td>64.0</td>\n",
-       "      <td>130</td>\n",
-       "      <td>70</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>female</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>17623</td>\n",
-       "      <td>2</td>\n",
-       "      <td>169</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>150</td>\n",
-       "      <td>100</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>17474</td>\n",
-       "      <td>1</td>\n",
-       "      <td>156</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>100</td>\n",
-       "      <td>60</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>female</td>\n",
+       "      <td>34979.0</td>\n",
+       "      <td>59.919230</td>\n",
+       "      <td>11.402330</td>\n",
+       "      <td>7.784989</td>\n",
+       "      <td>58.131836</td>\n",
+       "      <td>199.010050</td>\n",
+       "      <td>34979.0</td>\n",
+       "      <td>0.052117</td>\n",
+       "      <td>0.222266</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      age  gender  height  weight  ap_hi  ap_lo  cholesterol  gluc  smoke  \\\n",
-       "id                                                                          \n",
-       "0   18393       2     168    62.0    110     80            1     1      0   \n",
-       "1   20228       1     156    85.0    140     90            3     1      0   \n",
-       "2   18857       1     165    64.0    130     70            3     1      0   \n",
-       "3   17623       2     169    82.0    150    100            1     1      0   \n",
-       "4   17474       1     156    56.0    100     60            1     1      0   \n",
+       "            bmi                                                          \\\n",
+       "          count       mean        std        min        50%         max   \n",
+       "cardio                                                                    \n",
+       "0       35021.0  55.801023  10.067571  16.536213  54.167626  173.333333   \n",
+       "1       34979.0  59.919230  11.402330   7.784989  58.131836  199.010050   \n",
        "\n",
-       "    alco  active  cardio     sex  \n",
-       "id                                \n",
-       "0      0       1       0    male  \n",
-       "1      0       1       1  female  \n",
-       "2      0       0       1  female  \n",
-       "3      0       1       1    male  \n",
-       "4      0       0       0  female  "
+       "           alco                                     \n",
+       "          count      mean       std  min  50%  max  \n",
+       "cardio                                              \n",
+       "0       35021.0  0.055424  0.228809  0.0  0.0  1.0  \n",
+       "1       34979.0  0.052117  0.222266  0.0  0.0  1.0  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Ваш код здесь\n",
+    "bmi = df['weight'] / np.sqrt((df['height']/100))\n",
+    "#df.insert(loc=len(df.columns), column='bmi', value=bmi)\n",
     "\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**<font color='red'>Вопрос 6 (2 балла).</font> Постройте новый признак – BMI ([Body Mass Index](https://en.wikipedia.org/wiki/Body_mass_index)). Для этого надо вес в килограммах поделить на квадрат роста в метрах. Нормальными считаются значения BMI от 18.5 до 25. Выберите верные утверждения.**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**<font color='red'>Утверждения:</font>**\n",
-    "- Медианный BMI по выборке лежит в пределах нормы\n",
-    "- У женщин в среднем BMI выше, чем у мужчин\n",
-    "- У здоровых в среднем BMI выше, чем у больных\n",
-    "- В сегменте здоровых и непьющих мужчин BMI ближе к норме, чем в сегменте здоровых и непьющих женщин"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Ваш код здесь"
+    "#здоровые и непьющие мужчины\n",
+    "\n",
+    "#здоровые и непьющие женщины\n",
+    "\n",
+    "\n",
+    "columns_to_show = ['bmi', 'alco']\n",
+    "\n",
+    "df.groupby(['cardio'])[columns_to_show].describe(percentiles=[])\n",
+    "\n"
    ]
   },
   {
@@ -881,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
