--- a/jupyter_notebooks/topic02_visual_analysis/lesson2_practice_visual_titanic.ipynb
+++ b/jupyter_notebooks/topic02_visual_analysis/lesson2_practice_visual_titanic.ipynb
@@ -244,14 +244,14 @@
        "      <th>top</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Kelly, Miss. Anna Katherine \"Annie Kate\"</td>\n",
+       "      <td>Andersson, Miss. Ellis Anna Maria</td>\n",
        "      <td>male</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>347082</td>\n",
+       "      <td>CA. 2343</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>C23 C25 C27</td>\n",
+       "      <td>G6</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -371,44 +371,44 @@
        "</div>"
       ],
       "text/plain": [
-       "          Survived      Pclass                                      Name  \\\n",
-       "count   891.000000  891.000000                                       891   \n",
-       "unique         NaN         NaN                                       891   \n",
-       "top            NaN         NaN  Kelly, Miss. Anna Katherine \"Annie Kate\"   \n",
-       "freq           NaN         NaN                                         1   \n",
-       "mean      0.383838    2.308642                                       NaN   \n",
-       "std       0.486592    0.836071                                       NaN   \n",
-       "min       0.000000    1.000000                                       NaN   \n",
-       "25%       0.000000    2.000000                                       NaN   \n",
-       "50%       0.000000    3.000000                                       NaN   \n",
-       "75%       1.000000    3.000000                                       NaN   \n",
-       "max       1.000000    3.000000                                       NaN   \n",
+       "          Survived      Pclass                               Name   Sex  \\\n",
+       "count   891.000000  891.000000                                891   891   \n",
+       "unique         NaN         NaN                                891     2   \n",
+       "top            NaN         NaN  Andersson, Miss. Ellis Anna Maria  male   \n",
+       "freq           NaN         NaN                                  1   577   \n",
+       "mean      0.383838    2.308642                                NaN   NaN   \n",
+       "std       0.486592    0.836071                                NaN   NaN   \n",
+       "min       0.000000    1.000000                                NaN   NaN   \n",
+       "25%       0.000000    2.000000                                NaN   NaN   \n",
+       "50%       0.000000    3.000000                                NaN   NaN   \n",
+       "75%       1.000000    3.000000                                NaN   NaN   \n",
+       "max       1.000000    3.000000                                NaN   NaN   \n",
        "\n",
-       "         Sex         Age       SibSp       Parch  Ticket        Fare  \\\n",
-       "count    891  714.000000  891.000000  891.000000     891  891.000000   \n",
-       "unique     2         NaN         NaN         NaN     681         NaN   \n",
-       "top     male         NaN         NaN         NaN  347082         NaN   \n",
-       "freq     577         NaN         NaN         NaN       7         NaN   \n",
-       "mean     NaN   29.699118    0.523008    0.381594     NaN   32.204208   \n",
-       "std      NaN   14.526497    1.102743    0.806057     NaN   49.693429   \n",
-       "min      NaN    0.420000    0.000000    0.000000     NaN    0.000000   \n",
-       "25%      NaN   20.125000    0.000000    0.000000     NaN    7.910400   \n",
-       "50%      NaN   28.000000    0.000000    0.000000     NaN   14.454200   \n",
-       "75%      NaN   38.000000    1.000000    0.000000     NaN   31.000000   \n",
-       "max      NaN   80.000000    8.000000    6.000000     NaN  512.329200   \n",
+       "               Age       SibSp       Parch    Ticket        Fare Cabin  \\\n",
+       "count   714.000000  891.000000  891.000000       891  891.000000   204   \n",
+       "unique         NaN         NaN         NaN       681         NaN   147   \n",
+       "top            NaN         NaN         NaN  CA. 2343         NaN    G6   \n",
+       "freq           NaN         NaN         NaN         7         NaN     4   \n",
+       "mean     29.699118    0.523008    0.381594       NaN   32.204208   NaN   \n",
+       "std      14.526497    1.102743    0.806057       NaN   49.693429   NaN   \n",
+       "min       0.420000    0.000000    0.000000       NaN    0.000000   NaN   \n",
+       "25%      20.125000    0.000000    0.000000       NaN    7.910400   NaN   \n",
+       "50%      28.000000    0.000000    0.000000       NaN   14.454200   NaN   \n",
+       "75%      38.000000    1.000000    0.000000       NaN   31.000000   NaN   \n",
+       "max      80.000000    8.000000    6.000000       NaN  512.329200   NaN   \n",
        "\n",
-       "              Cabin Embarked  \n",
-       "count           204      889  \n",
-       "unique          147        3  \n",
-       "top     C23 C25 C27        S  \n",
-       "freq              4      644  \n",
-       "mean            NaN      NaN  \n",
-       "std             NaN      NaN  \n",
-       "min             NaN      NaN  \n",
-       "25%             NaN      NaN  \n",
-       "50%             NaN      NaN  \n",
-       "75%             NaN      NaN  \n",
-       "max             NaN      NaN  "
+       "       Embarked  \n",
+       "count       889  \n",
+       "unique        3  \n",
+       "top           S  \n",
+       "freq        644  \n",
+       "mean        NaN  \n",
+       "std         NaN  \n",
+       "min         NaN  \n",
+       "25%         NaN  \n",
+       "50%         NaN  \n",
+       "75%         NaN  \n",
+       "max         NaN  "
       ]
      },
      "execution_count": 4,
@@ -517,9 +517,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-9-15503e29eb4b>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-9-15503e29eb4b>\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    fare_pclass1_no_out = # Ваш код здесь\u001b[0m\n\u001b[1;37m                                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "train_df['Fare_no_out'] = train_df['Fare']\n",
     "fare_pclass1 = train_df[train_df['Pclass'] == 1]['Fare']\n",
