--- a/jupyter_notebooks/topic03_decision_trees_knn/lesson3_practice_trees_titanic.ipynb
+++ b/jupyter_notebooks/topic03_decision_trees_knn/lesson3_practice_trees_titanic.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -331,14 +331,14 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Lefebre, Miss. Ida</td>\n",
+       "      <td>Ford, Miss. Doolina Margaret \"Daisy\"</td>\n",
        "      <td>male</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>CA. 2343</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>B96 B98</td>\n",
+       "      <td>G6</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -466,47 +466,47 @@
        "</div>"
       ],
       "text/plain": [
-       "        PassengerId    Survived      Pclass                Name   Sex  \\\n",
-       "count    891.000000  891.000000  891.000000                 891   891   \n",
-       "unique          NaN         NaN         NaN                 891     2   \n",
-       "top             NaN         NaN         NaN  Lefebre, Miss. Ida  male   \n",
-       "freq            NaN         NaN         NaN                   1   577   \n",
-       "mean     446.000000    0.383838    2.308642                 NaN   NaN   \n",
-       "std      257.353842    0.486592    0.836071                 NaN   NaN   \n",
-       "min        1.000000    0.000000    1.000000                 NaN   NaN   \n",
-       "25%      223.500000    0.000000    2.000000                 NaN   NaN   \n",
-       "50%      446.000000    0.000000    3.000000                 NaN   NaN   \n",
-       "75%      668.500000    1.000000    3.000000                 NaN   NaN   \n",
-       "max      891.000000    1.000000    3.000000                 NaN   NaN   \n",
+       "        PassengerId    Survived      Pclass  \\\n",
+       "count    891.000000  891.000000  891.000000   \n",
+       "unique          NaN         NaN         NaN   \n",
+       "top             NaN         NaN         NaN   \n",
+       "freq            NaN         NaN         NaN   \n",
+       "mean     446.000000    0.383838    2.308642   \n",
+       "std      257.353842    0.486592    0.836071   \n",
+       "min        1.000000    0.000000    1.000000   \n",
+       "25%      223.500000    0.000000    2.000000   \n",
+       "50%      446.000000    0.000000    3.000000   \n",
+       "75%      668.500000    1.000000    3.000000   \n",
+       "max      891.000000    1.000000    3.000000   \n",
        "\n",
-       "               Age       SibSp       Parch    Ticket        Fare    Cabin  \\\n",
-       "count   714.000000  891.000000  891.000000       891  891.000000      204   \n",
-       "unique         NaN         NaN         NaN       681         NaN      147   \n",
-       "top            NaN         NaN         NaN  CA. 2343         NaN  B96 B98   \n",
-       "freq           NaN         NaN         NaN         7         NaN        4   \n",
-       "mean     29.699118    0.523008    0.381594       NaN   32.204208      NaN   \n",
-       "std      14.526497    1.102743    0.806057       NaN   49.693429      NaN   \n",
-       "min       0.420000    0.000000    0.000000       NaN    0.000000      NaN   \n",
-       "25%      20.125000    0.000000    0.000000       NaN    7.910400      NaN   \n",
-       "50%      28.000000    0.000000    0.000000       NaN   14.454200      NaN   \n",
-       "75%      38.000000    1.000000    0.000000       NaN   31.000000      NaN   \n",
-       "max      80.000000    8.000000    6.000000       NaN  512.329200      NaN   \n",
+       "                                        Name   Sex         Age       SibSp  \\\n",
+       "count                                    891   891  714.000000  891.000000   \n",
+       "unique                                   891     2         NaN         NaN   \n",
+       "top     Ford, Miss. Doolina Margaret \"Daisy\"  male         NaN         NaN   \n",
+       "freq                                       1   577         NaN         NaN   \n",
+       "mean                                     NaN   NaN   29.699118    0.523008   \n",
+       "std                                      NaN   NaN   14.526497    1.102743   \n",
+       "min                                      NaN   NaN    0.420000    0.000000   \n",
+       "25%                                      NaN   NaN   20.125000    0.000000   \n",
+       "50%                                      NaN   NaN   28.000000    0.000000   \n",
+       "75%                                      NaN   NaN   38.000000    1.000000   \n",
+       "max                                      NaN   NaN   80.000000    8.000000   \n",
        "\n",
-       "       Embarked  \n",
-       "count       889  \n",
-       "unique        3  \n",
-       "top           S  \n",
-       "freq        644  \n",
-       "mean        NaN  \n",
-       "std         NaN  \n",
-       "min         NaN  \n",
-       "25%         NaN  \n",
-       "50%         NaN  \n",
-       "75%         NaN  \n",
-       "max         NaN  "
+       "             Parch    Ticket        Fare Cabin Embarked  \n",
+       "count   891.000000       891  891.000000   204      889  \n",
+       "unique         NaN       681         NaN   147        3  \n",
+       "top            NaN  CA. 2343         NaN    G6        S  \n",
+       "freq           NaN         7         NaN     4      644  \n",
+       "mean      0.381594       NaN   32.204208   NaN      NaN  \n",
+       "std       0.806057       NaN   49.693429   NaN      NaN  \n",
+       "min       0.000000       NaN    0.000000   NaN      NaN  \n",
+       "25%       0.000000       NaN    7.910400   NaN      NaN  \n",
+       "50%       0.000000       NaN   14.454200   NaN      NaN  \n",
+       "75%       0.000000       NaN   31.000000   NaN      NaN  \n",
+       "max       6.000000       NaN  512.329200   NaN      NaN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
        "      <th>top</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Mock, Mr. Philipp Edmund</td>\n",
+       "      <td>Aronsson, Mr. Ernst Axel Algot</td>\n",
        "      <td>male</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -714,34 +714,47 @@
        "</div>"
       ],
       "text/plain": [
-       "        PassengerId      Pclass                      Name   Sex         Age  \\\n",
-       "count    418.000000  418.000000                       418   418  332.000000   \n",
-       "unique          NaN         NaN                       418     2         NaN   \n",
-       "top             NaN         NaN  Mock, Mr. Philipp Edmund  male         NaN   \n",
-       "freq            NaN         NaN                         1   266         NaN   \n",
-       "mean    1100.500000    2.265550                       NaN   NaN   30.272590   \n",
-       "std      120.810458    0.841838                       NaN   NaN   14.181209   \n",
-       "min      892.000000    1.000000                       NaN   NaN    0.170000   \n",
-       "25%      996.250000    1.000000                       NaN   NaN   21.000000   \n",
-       "50%     1100.500000    3.000000                       NaN   NaN   27.000000   \n",
-       "75%     1204.750000    3.000000                       NaN   NaN   39.000000   \n",
-       "max     1309.000000    3.000000                       NaN   NaN   76.000000   \n",
+       "        PassengerId      Pclass                            Name   Sex  \\\n",
+       "count    418.000000  418.000000                             418   418   \n",
+       "unique          NaN         NaN                             418     2   \n",
+       "top             NaN         NaN  Aronsson, Mr. Ernst Axel Algot  male   \n",
+       "freq            NaN         NaN                               1   266   \n",
+       "mean    1100.500000    2.265550                             NaN   NaN   \n",
+       "std      120.810458    0.841838                             NaN   NaN   \n",
+       "min      892.000000    1.000000                             NaN   NaN   \n",
+       "25%      996.250000    1.000000                             NaN   NaN   \n",
+       "50%     1100.500000    3.000000                             NaN   NaN   \n",
+       "75%     1204.750000    3.000000                             NaN   NaN   \n",
+       "max     1309.000000    3.000000                             NaN   NaN   \n",
        "\n",
-       "             SibSp       Parch    Ticket        Fare            Cabin Embarked  \n",
-       "count   418.000000  418.000000       418  417.000000               91      418  \n",
-       "unique         NaN         NaN       363         NaN               76        3  \n",
-       "top            NaN         NaN  PC 17608         NaN  B57 B59 B63 B66        S  \n",
-       "freq           NaN         NaN         5         NaN                3      270  \n",
-       "mean      0.447368    0.392344       NaN   35.627188              NaN      NaN  \n",
-       "std       0.896760    0.981429       NaN   55.907576              NaN      NaN  \n",
-       "min       0.000000    0.000000       NaN    0.000000              NaN      NaN  \n",
-       "25%       0.000000    0.000000       NaN    7.895800              NaN      NaN  \n",
-       "50%       0.000000    0.000000       NaN   14.454200              NaN      NaN  \n",
-       "75%       1.000000    0.000000       NaN   31.500000              NaN      NaN  \n",
-       "max       8.000000    9.000000       NaN  512.329200              NaN      NaN  "
+       "               Age       SibSp       Parch    Ticket        Fare  \\\n",
+       "count   332.000000  418.000000  418.000000       418  417.000000   \n",
+       "unique         NaN         NaN         NaN       363         NaN   \n",
+       "top            NaN         NaN         NaN  PC 17608         NaN   \n",
+       "freq           NaN         NaN         NaN         5         NaN   \n",
+       "mean     30.272590    0.447368    0.392344       NaN   35.627188   \n",
+       "std      14.181209    0.896760    0.981429       NaN   55.907576   \n",
+       "min       0.170000    0.000000    0.000000       NaN    0.000000   \n",
+       "25%      21.000000    0.000000    0.000000       NaN    7.895800   \n",
+       "50%      27.000000    0.000000    0.000000       NaN   14.454200   \n",
+       "75%      39.000000    1.000000    0.000000       NaN   31.500000   \n",
+       "max      76.000000    8.000000    9.000000       NaN  512.329200   \n",
+       "\n",
+       "                  Cabin Embarked  \n",
+       "count                91      418  \n",
+       "unique               76        3  \n",
+       "top     B57 B59 B63 B66        S  \n",
+       "freq                  3      270  \n",
+       "mean                NaN      NaN  \n",
+       "std                 NaN      NaN  \n",
+       "min                 NaN      NaN  \n",
+       "25%                 NaN      NaN  \n",
+       "50%                 NaN      NaN  \n",
+       "75%                 NaN      NaN  \n",
+       "max                 NaN      NaN  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -780,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -804,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -826,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +848,7 @@
        "((891, 24), (418, 25))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +868,7 @@
        "{'Parch_9'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -877,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1088,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1284,7 +1297,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1309,13 +1322,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=2,\n",
+       "            max_features=None, max_leaf_nodes=None,\n",
+       "            min_impurity_split=1e-07, min_samples_leaf=1,\n",
+       "            min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "            presort=False, random_state=17, splitter='best')"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Ваш код здесь"
+    "# Ваш код здесь\n",
+    "\n",
+    "tree_1 = DecisionTreeClassifier(max_depth=2, random_state=17)\n",
+    "\n",
+    "tree_1.fit(train_df, y)\n"
    ]
   },
   {
@@ -1327,13 +1357,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1,\n",
+       "       0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0,\n",
+       "       0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0,\n",
+       "       1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0,\n",
+       "       1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1,\n",
+       "       0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0,\n",
+       "       0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 1, 0,\n",
+       "       1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0,\n",
+       "       0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0,\n",
+       "       0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1,\n",
+       "       0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0,\n",
+       "       0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0,\n",
+       "       1, 0, 0, 1, 0, 0, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0,\n",
+       "       1, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0,\n",
+       "       1, 0, 0, 0], dtype=int64)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Ваш код здесь"
+    "# Ваш код здесь\n",
+    "\n",
+    "tree_1.predict(test_df)\n",
+    "\n"
    ]
   },
   {
@@ -1345,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -1374,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -1410,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -1454,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -1472,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
